force-app/main/default/objects/Usage_Snapshot__c/Usage_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Usage Snapshot</label>
    <pluralLabel>Usage Snapshots</pluralLabel>
    <nameField>
        <label>Snapshot Name</label>
        <type>AutoNumber</type>
        <displayFormat>USAGE-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>