force-app/main/default/objects/Usage_Snapshot__c/fields/Chargeback_Count__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Count__c</fullName>
    <label>Chargeback Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>