force-app/main/default/objects/Usage_Snapshot__c/fields/Dispute_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Rate__c</fullName>
    <label>Dispute Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>