force-app/main/default/objects/Usage_Snapshot__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <description>Convention: always the 1st of the month</description>
    <type>Date</type>
</CustomField>