force-app/main/default/objects/Usage_Snapshot__c/fields/Net_Revenue_INR__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue_INR__c</fullName>
    <label>Net Revenue (INR)</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>