force-app/main/default/objects/Usage_Snapshot__c/fields/Provisioned_Account__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Account__c</fullName>
    <label>Provisioned Account</label>
    <type>Lookup</type>
    <referenceTo>Provisioned_Account__c</referenceTo>
    <relationshipLabel>Usage Snapshots</relationshipLabel>
    <relationshipName>Usage_Snapshots</relationshipName>
</CustomField>