force-app/main/default/objects/Usage_Snapshot__c/fields/Refund_Rate__c.field-meta.xml
<CustomField>
    <fullName>Refund_Rate__c</fullName>
    <label>Refund Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>