force-app/main/default/objects/Usage_Snapshot__c/fields/Revenue_INR__c.field-meta.xml
<CustomField>
    <fullName>Revenue_INR__c</fullName>
    <label>Revenue (INR)</label>
    <description>Stripe's own revenue off this account</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>