force-app/main/default/objects/Usage_Snapshot__c/fields/Txn_Count__c.field-meta.xml
<CustomField>
    <fullName>Txn_Count__c</fullName>
    <label>Txn Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>