force-app/main/default/objects/Usage_Snapshot__c/fields/Volume_INR__c.field-meta.xml
<CustomField>
    <fullName>Volume_INR__c</fullName>
    <label>Volume (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>