force-app/main/default/objects/Usage_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All Usage Snapshots</label>
    <columns>NAME</columns>
    <columns>Provisioned_Account__c</columns>
    <columns>Month__c</columns>
    <columns>Volume_INR__c</columns>
    <columns>Txn_Count__c</columns>
    <columns>Revenue_INR__c</columns>
    <columns>Dispute_Rate__c</columns>
</ListView>